Minor update: added created date on issues & dark mode

--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
             </form>
         </aside> -->
         <div class="container">
-            <h1>Issue tracker <small>by KougatSundew</small></h1>
+            <h1>Issue tracker v0.0.1 <small>by KougatSundew</small></h1>
             <div class="form-wrapper">
                 <h3>Add New Issue:</h3>
                 <form id="issueInputForm">
                     <div class="mb-3">
                         <label for="issueDescInput">Description</label>
-                        <input type="text" class="form-control" name="" id="issueDescInput" placeholder="Describe the issue ...">
+                        <input type="text" class="form-control bg-dark text-light" name="" id="issueDescInput" placeholder="Describe the issue ...">
                     </div>
                     <div class="mb-3">
                         <label for="issueSeverityInput">Severity</label>
-                        <select id="issueSeverityInput" class="form-control">
+                        <select id="issueSeverityInput" class="form-control bg-dark text-light">
                             <option value="Low">Low</option>
                             <option value="Medium">Medium</option>
                             <option value="High">High</option>
@@ -56,7 +56,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="issueAssignedToInput">Assigned to</label>
-                        <input type="text" class="form-control" name="" id="issueAssignedToInput" placeholder="Enter responsible ...">
+                        <input type="text" class="form-control bg-dark text-light" name="" id="issueAssignedToInput" placeholder="Enter responsible ...">
                     </div>
                     <button type="submit" class="btn btn-primary">Add</button>
                 </form>
