Minor update: fixed the title

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </form>
         </aside> -->
         <div class="container">
-            <h1>Issue tracker v0.0.1 <small>by KougatSundew</small></h1>
+            <h1>Issue tracker v0.0.1 </h1><small>by KougatSundew</small>
             <div class="form-wrapper">
                 <h3>Add New Issue:</h3>
                 <form id="issueInputForm">
