--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
                         <label for="issueAssignedToInput">Assigned to</label>
                         <input type="text" class="form-control bg-dark text-light" name="" id="issueAssignedToInput" placeholder="Enter responsible ...">
                     </div>
-                    <button type="submit" class="btn btn-primary">Add</button>
+                    <div>
+                        <button type="submit" class="btn btn-primary">Add</button>
+                    </div>
                 </form>
             </div>
             <div class="col-lg-12 content">
